# embednfs

./: CLAUDE.md  README.md
crates/embednfs-proto/src/: rpc.rs
crates/embednfs-proto/src/types/: basic.rs  callback.rs  codec.rs  constants.rs  mod.rs  operations.rs
crates/embednfs/src/: attrs.rs  fs.rs  identity.rs  internal.rs  lib.rs
crates/embednfs/src/memfs/: core.rs  tests.rs
crates/embednfs/src/server/: backchannel.rs  compound.rs  file_attrs.rs  mod.rs  transport.rs
crates/embednfs/src/server/ops/: attrs.rs  delegation.rs  directory.rs  file.rs  locking.rs  mod.rs  xattrs.rs
crates/embednfs/src/session/: clients.rs  delegations.rs  mod.rs  model.rs  opens.rs  sequence.rs  stateids.rs  tests.rs
crates/embednfs/tests/: object_scoped_fsid.rs  transport_fragmentation.rs
crates/embednfs/tests/common/: access_fs.rs  encode.rs  mod.rs  parse.rs  server.rs  session.rs  wrappers.rs
crates/embednfs/tests/compound_session_cases/: delegation.rs  misc.rs  mod.rs  protocol_sequence.rs
crates/embednfs/tests/directory_cases/: named_attrs.rs
crates/embednfs/tests/file_ops_cases/: attrs_state.rs  auth_policy.rs  lifecycle.rs  mod.rs  secinfo_verify.rs  xattrs.rs
crates/embednfsd/: Cargo.toml  README.md
crates/embednfsd/src/: main.rs
design/: delegations.md  object-scoped-fsid.md
docs/: linux-client-compatibility.md  macos-mount-investigation.md
scripts/: smoke-linux-nfs41.sh  smoke-macos-nfs41.sh
