[package]
name = "embednfsd"
version = "0.4.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NFSv4.1 server daemon powered by embednfs"
readme = "README.md"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
embednfs = { path = "../embednfs", version = "0.4.1" }
libc = "0.2.186"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
